; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_cue.c_strip_quotes.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_cue.c_strip_quotes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bstr = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"\22\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @strip_quotes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @strip_quotes(i32 %0) #0 {
  %2 = alloca %struct.bstr, align 4
  %3 = alloca %struct.bstr, align 4
  %4 = alloca %struct.bstr, align 4
  %5 = getelementptr inbounds %struct.bstr, %struct.bstr* %3, i32 0, i32 0
  store i32 %0, i32* %5, align 4
  %6 = bitcast %struct.bstr* %4 to i8*
  %7 = bitcast %struct.bstr* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 %7, i64 4, i1 false)
  %8 = call i64 @bstr_eatstart0(%struct.bstr* %4, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = call i64 @bstr_eatend0(%struct.bstr* %4, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = bitcast %struct.bstr* %2 to i8*
  %15 = bitcast %struct.bstr* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %14, i8* align 4 %15, i64 4, i1 false)
  br label %19

16:                                               ; preds = %10, %1
  %17 = bitcast %struct.bstr* %2 to i8*
  %18 = bitcast %struct.bstr* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %17, i8* align 4 %18, i64 4, i1 false)
  br label %19

19:                                               ; preds = %16, %13
  %20 = getelementptr inbounds %struct.bstr, %struct.bstr* %2, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  ret i32 %21
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @bstr_eatstart0(%struct.bstr*, i8*) #2

declare dso_local i64 @bstr_eatend0(%struct.bstr*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
